--- a/data_collection_and_cleaning.ipynb
+++ b/data_collection_and_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5pZ4yR15O5jnonCwceVjc",
+      "authorship_tag": "ABX9TyOBMIITV5UhoEoFZponGXIB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "sNQKp0nSUNOC"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9w01KC7WUa8r",
-        "outputId": "f5d092b6-e9eb-4d50-8295-20b74496d063"
+        "outputId": "b167b1c2-e77c-4656-b7d0-6dc5ceac9adf"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -131,9 +131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "47fcKjLux5hN",
-        "outputId": "e748b2d2-7889-49b4-a418-02dea806dd5c"
+        "outputId": "d5cc612b-afbe-4b7f-94ea-5ae00630b84c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "43vibTXsRNGh"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -187,9 +187,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ns1kBcgewg01",
-        "outputId": "45b296aa-02eb-4a25-9672-2755d6eaec84"
+        "outputId": "9904c2cc-fa23-46fc-be0d-3c5227b57475"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
       "metadata": {
         "id": "ZEqqxDm6KK7T"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -274,12 +274,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 206
         },
         "id": "tyEz4Sgg5Ob6",
-        "outputId": "3a46b811-0b42-4a44-a907-4848281ec282"
+        "outputId": "f5675523-b9a2-4484-a1ab-b0003ebdc358"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +295,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3b472fd9-786c-4cbf-b216-7a5e13f838a1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1b02767b-1c2e-4ab6-990f-bcb8ae8354a5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -355,7 +356,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3b472fd9-786c-4cbf-b216-7a5e13f838a1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b02767b-1c2e-4ab6-990f-bcb8ae8354a5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -407,12 +408,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3b472fd9-786c-4cbf-b216-7a5e13f838a1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1b02767b-1c2e-4ab6-990f-bcb8ae8354a5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3b472fd9-786c-4cbf-b216-7a5e13f838a1');\n",
+              "        const element = document.querySelector('#df-1b02767b-1c2e-4ab6-990f-bcb8ae8354a5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -432,8 +433,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d0f82c75-83ec-4cad-a1ea-937ba69f54ec\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d0f82c75-83ec-4cad-a1ea-937ba69f54ec')\"\n",
+              "<div id=\"df-18e13864-ae05-4ada-8b9c-09432cc60b8c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-18e13864-ae05-4ada-8b9c-09432cc60b8c')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -552,7 +553,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d0f82c75-83ec-4cad-a1ea-937ba69f54ec button');\n",
+              "        document.querySelector('#df-18e13864-ae05-4ada-8b9c-09432cc60b8c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -569,7 +570,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -582,7 +583,7 @@
       "metadata": {
         "id": "jKS161Zpa4gf"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -601,7 +602,7 @@
       "metadata": {
         "id": "GqEv0kBJOZZI"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -620,7 +621,7 @@
       "metadata": {
         "id": "XsAaQ3QmSKBX"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -643,19 +644,19 @@
       "metadata": {
         "id": "_a2tqw53jMwP"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#save constitutions_df to csv\n",
-        "constitutions_df.to_csv(\"constitutions.csv\", encoding=\"utf-8\")"
+        "constitutions_df.to_csv(\"constitutions.csv\", encoding=\"utf-8\", index = False)"
       ],
       "metadata": {
         "id": "a7Y6SW-TYqVV"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     }
   ]
