--- a/freedom_analysis.ipynb
+++ b/freedom_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP099jiN9CK2URcQlE1stlV",
+      "authorship_tag": "ABX9TyMFUMXj/RKVzR05i6h62DtL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "VjYhOgwvGDLZ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
         "id": "8OXBrGtRJyba",
         "outputId": "02d72a7a-6bce-41ff-f286-d1f3fedcfc50"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "jCjEdxlEKqnK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,8 +132,19 @@
       "metadata": {
         "id": "ERXfa4ShdNh8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reasons some countries will be blank in choropleths:\n",
+        "- There is no fully implemented, in force constitution (ex: Libya, having ben in civil war from 2014-2020)\n",
+        "- There was no human freedom data from [our source](https://worldpopulationreview.com/country-rankings/freedom-index-by-country) (ex: Côte d’Ivoire and Afghanistan)"
+      ],
+      "metadata": {
+        "id": "4PPWHCLI4Q2r"
+      }
     },
     {
       "cell_type": "code",
@@ -153,7 +164,7 @@
         "id": "p4TgnZVBLdYg",
         "outputId": "bc0fac95-1a19-4814-fb68-4f178810e7a5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -185,7 +196,7 @@
         "id": "s5KaVF0pbikF",
         "outputId": "8f996ec1-5b09-46b8-c609-c9b2f32e77db"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -217,7 +228,7 @@
         "id": "ZG2WCJzBcMoA",
         "outputId": "3b48827e-7243-43ef-b893-b84d7427a97a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -249,7 +260,7 @@
         "id": "2zCSJXxZcNA2",
         "outputId": "82e9fcb3-b00c-4e07-f5be-6eb493626760"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +292,7 @@
         "id": "wf6FcfyYirc8",
         "outputId": "ccae15fa-875a-423b-a966-1329991ccda1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +341,7 @@
         "id": "keTwXP-rw2In",
         "outputId": "ce59d03f-b30c-4d3a-ec67-a3203ca63d48"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
